<resources>
    <string name="app_name">NeoSTORE</string>
    <string name="terms">I agree the
        <u>Terms &amp; Conditions</u>
    </string>
    <string name="forgot_password">
        <u>Forgot Password?</u>
    </string>
    <string name="toolbar_register">Register</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_navigation_drawer">NeoSTORE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_mycart">My Cart</string>
    <string name="menu_tables">Tables</string>
    <string name="menu_sofas">Sofas</string>
    <string name="menu_chairs">Chairs</string>
    <string name="menu_cupboards">Cupboards</string>
    <string name="menu_myaccount">My Account</string>
    <string name="menu_storelocator">Store Locator</string>
    <string name="menu_myorders">My Orders</string>
    <string name="menu_logout">Logout</string>

    <string name="rupee_sign">\u20B9</string>

    <string-array name="spinner_quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
